# dbml-to-sqlmodel

./: .dbml_to_code  .dbml_to_crud  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_GUIDE.md  CONTRIBUTING.md  DEMO.md  DEVELOPMENT.md  EXAMPLES.md  INTERACTIVE_CLI_SUMMARY.md  INTERACTIVE_GUIDE.md  LICENSE  MIGRATION.md  Makefile  PATCH_APPLICATION.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  test_interactive.sh
.github/: dependabot.yml
.github/workflows/: publish.yml  tests.yml
.old_structure/: config.py  dbml_to_sqlmodel.py  utils.py
docs/: CLI_GUIDE.md
examples/: schema.dbml
schemas/: example_blog.dbml  schema.dbml
src/: __init__.py
src/dbml_to_code/: __init__.py  cli.py  config.py  constants.py  dbml_to_sqlmodel.py  generate_app.py  generator.py  sqlmodel_to_dbml.py  utils.py
src/dbml_to_code/commands/: generate.py  info.py  preview.py
src/dbml_to_code/core/: __init__.py  code_generator.py  config.py  parser.py
src/dbml_to_code/integrations/: __init__.py
src/dbml_to_code/models/: __init__.py  config_models.py  file_info.py  schema.py
src/dbml_to_code/utils/: __init__.py  diff.py  file_manager.py  formatters.py  type_mapping.py
src/dbml_to_crud/: __init__.py  cli.py  config.py  dbml_to_sqlmodel.py  generate_app.py  generator.py  sqlmodel_to_dbml.py  utils.py
src/dbml_to_crud/commands/: code_to_dbml.py  generate.py  info.py  preview.py
src/dbml_to_sqlmodel/: __init__.py  cli.py  constants.py  generate_app.py  generator.py  sqlmodel_to_dbml.py
src/dbml_to_sqlmodel/commands/: code_to_dbml.py  generate.py  info.py  preview.py
src/dbml_to_sqlmodel/core/: __init__.py  code_generator.py  config.py  parser.py
src/dbml_to_sqlmodel/integrations/: __init__.py  pydbml_adapter.py
src/dbml_to_sqlmodel/models/: __init__.py  config_models.py  file_info.py  schema.py
src/dbml_to_sqlmodel/utils/: __init__.py  diff.py  file_manager.py  formatters.py  type_mapping.py
tests/: test_cli.py  test_code_generator.py  test_commands.py  test_config.py  test_full_coverage.py  test_generated_app_smoke.py  test_generator.py  test_parser.py  test_sqlmodel_to_dbml.py  test_style.py  test_utils.py
