[project]
name = "dbml-to-sqlmodel"
version = "0.1.0"
description = "Generate SQLModel models and FastAPI CRUD from DBML schema"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydbml>=1.2.1",
    "typer>=0.17.0",
    "rich>=14.0.0",
    "pydantic>=2.11.1",
    "questionary>=2.0.0",
    "unidiff>=0.7.5",
]

[project.optional-dependencies]
runtime = [
    "aiosqlite>=0.22.1",
    "fastapi[all]>=0.128.0",
    "fastcrud>=0.20.1",
    "sqladmin>=0.22.0",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.11",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[tool.uv]
package = true

[project.scripts]
dbml-to-sqlmodel = "dbml_to_sqlmodel.cli:app"
dbml2sm = "dbml_to_sqlmodel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/dbml_to_sqlmodel"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "B904",    # raise from (will fix gradually)
    "ARG001",  # unused function argument
    "E402",    # module level import not at top
    "PLC0415", # import should be at top level
    "SIM102",  # nested if simplification
    "SIM103",  # return condition directly
    "B905",    # zip without strict
    "PLW2901", # loop variable overwritten
    "RUF012",  # mutable class attribute in tests
    "RUF013",  # implicit Optional
    "B017",    # pytest.raises(Exception) is fine for tests
    "SIM118",  # key in dict.keys() is clearer sometimes
    "UP022",   # capture_output parameter in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "normal"
show_error_codes = true
ignore_errors = false
exclude = ["build", "dist", ".venv", "output"]
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "pydbml.*",
    "fastcrud.*",
    "sqladmin.*",
    "questionary.*",
    "unidiff.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dbml_to_sqlmodel.sqlmodel_to_dbml"
disable_error_code = ["assignment", "arg-type"]

[[tool.mypy.overrides]]
module = "dbml_to_sqlmodel.generate_app"
ignore_errors = true
